--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -23,10 +23,10 @@
     },
     "version": "2"
   },
-  "theme": "Catppuccin Macchiato",
+  "theme": "Dracula",
   "vim_mode": true,
   "ui_font_size": 14,
-  "buffer_font_family": "Input Mono",
+  "buffer_font_family": "AtkynsonMono Nerd Font Mono",
   "buffer_font_size": 13,
   "show_whitespaces": "selection",
   "cursor_blink": false,
